# chromatography

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.fr.md  README.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/: release-drafter-semver-template.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml  decision.yml
.github/workflows/: ci.yml  coverage.yml  mirror.yml  release-drafter-semver.yml  release-drafter.yml
benches/: langmuir_performance.rs  solver_performance.rs
chrom_rs/: all.html  index.html  sidebar-items.js
chrom_rs/cli/: constant.COMMANDS_YML.html  constant.RUN_HANDLER_NAME.html  fn.build_app.html  index.html  sidebar-items.js
chrom_rs/config/: enum.ConfigError.html  enum.Format.html  (+4 more)
examples/: acids_from_config.rs  acids_multi.rs  diffusion.rs  high_load.rs  tfa.rs  tfa_from_config.rs
plot_parallelism_threshold/: all.html  constant.N_SPECIES.html  constant.PARALLEL_THRESHOLD_OPS.html  constant.THRESHOLD_N_POINTS.html  enum.Regime.html  fn.collect_data_points.html  fn.generate_plot.html  fn.main.html  fn.parse_n_points.html  fn.read_estimates.html  index.html  sidebar-items.js  struct.ConfidenceInterval.html  struct.DataPoint.html  struct.Estimate.html  struct.Estimates.html  struct.LogLogRegression.html
plot_species_response_curve/: all.html  constant.N_POINTS.html  constant.N_REF.html  constant.PARALLEL_THRESHOLD_OPS.html  constant.THRESHOLD_N_SPECIES.html  enum.Solver.html  fn.collect_all_points.html  fn.collect_solver_points.html  fn.generate_plot.html  fn.main.html  fn.parse_n_species.html  fn.read_estimates.html  index.html  sidebar-items.js  struct.ConfidenceInterval.html  struct.DataPoint.html  struct.Estimate.html  struct.Estimates.html  struct.LogLogRegression.html
search.index/: 000001512a69.js  000bd97d95a9.js  003090e8b57f.js  004b96652dbe.js  004e21c07e2b.js  007bd0ab16ca.js  00a9ca2649bb.js  00e3f772537f.js  00e6a001bca3.js  00fd11c949c8.js  0198d5f170bc.js  02129e83a1ff.js  02328951c3df.js  0253ed3f3dd3.js  02c15df387dd.js  02fd6b24137e.js  032712d1f1f2.js  03a17a4bff48.js  03a20ddfca2e.js  04313368df8f.js  0489d516f4c2.js  04ea763d0f6f.js  053d85a2a950.js  05f2c001eeff.js  0625f72f71ca.js  062afe24085d.js  06d82042ca93.js  06db4fb918e0.js  07417cc001c7.js  0745e19b7a9a.js  07d562230084.js  07fc8b6e227c.js  087977b3c550.js  090dc7349817.js  0923580f2b89.js  09390edb5b3e.js  0991a4a83d00.js  0a00776671c3.js  0a200447d127.js  0a579884a633.js  (+405 more)
src/: lib.rs  main.rs
tests/: cli_integration.rs  integration_physics_solver.rs  solver_convergence.rs
tools/: plot_parallelism_threshold.rs  plot_species_response_curve.rs
validation/: dissimilarity.rs  main.rs  reference.rs
(+325 files in other folders)
