[package]
name = "chrom-rs"
version = "0.1.0"
edition = "2024"
exclude = [
    "examples/*",
    "benches/*",
    "tests/integration/*",
]

[features]
default = ["parallel"]
parallel = ["rayon"]


[package.metadata.coverage]
min-coverage = 80

[profile.coverage]
inherits = "test"
opt-level = 0


[dependencies]
dynamic-cli = "0.1.1"
nalgebra = "0.34.1"
num = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"

# Parallelism (optional)
rayon = { version = "1.11", optional = true }
ndarray = "0.17.2"

[dev-dependencies]
cargo-llvm-cov = "0.7.1"