[package]
name = "chrom-rs"
version = "0.1.0"
edition = "2024"
exclude = [
    "examples/*",
    "benches/*",
    "tests/integration/*",
]

[features]
default = ["parallel"]
parallel = ["rayon"]


[package.metadata.coverage]
min-coverage = 80

[profile.coverage]
inherits = "test"
opt-level = 0


[dependencies]
dynamic-cli = "0.1.1"
nalgebra = "0.34.1"
num = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"

# Export and visualization
chrono = "0.4"
plotters = "0.3"

# Parallelism (optional)
rayon = { version = "1.11", optional = true }
ndarray = "0.17.2"

[dev-dependencies]
approx = "0.5.1"
cargo-llvm-cov = "0.7.1"
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.25.0"

[[bench]]
name = "solver_performance"
harness = false

[[example]]
name = "tfa_chromatogram"
path = "examples/tfa.rs"
